--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <title>ThreeJS Starter</title>
 </head>
 <body>
+
     <canvas class="webgl"></canvas>
+
+    <div class="container">
+        <h1>Feel the sphere</h1>
+    </div>
+<section></section>
 </body>
 </html>
